[package]
name = "tor-node-parser"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "tor-node-parser"
path = "src/main.rs"

[[bin]]
name = "world-map"
path = "src/map.rs"

[dependencies]
anyhow     = "1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
ureq       = "2"

[build-dependencies]
ureq = "2"
