[package]
name = "tor-node-parser"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "tor-node-parser"
path = "src/main.rs"

[[bin]]
name = "world-map"
path = "src/map.rs"

[dependencies]
anyhow     = "1"
maxminddb  = "0.23"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
# default-features = false strips the built-in gzip middleware so ureq
# never compresses the response body — plain JSON comes back directly.
ureq       = { version = "2", default-features = false, features = ["tls"] }

[build-dependencies]
flate2 = "1"
tar    = "0.4"
ureq   = { version = "2", default-features = false, features = ["tls"] }
